<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/mainActivityMainLogo"
        style="@style/Logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="69dp"
        android:text="@string/main_activity_logo"
        android:textSize="100sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mainActivityButtonPlay"
        style="@style/AppButton0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="137dp"
        android:text="@string/main_activity_play_button"
        android:visibility="invisible" />

    <Button
        android:id="@+id/mainActivityButtonScore"
        style="@style/AppButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="61dp"
        android:text="@string/main_activity_score_button"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/rateAppText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:text="¡Rate the app!"
        android:textSize="36sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="303dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp" />

</RelativeLayout>